--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,13 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es6": true,
+        "commonjs": true,
+        "node": true
     },
     "extends": ["eslint:recommended", "prettier", "prettier/babel", "prettier/prettier"],
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": 6,
         "sourceType": "module"
     },
     "rules": {
