--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.3.2",
     "prettier": "2.2.1",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
