--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,7 @@
     "ecmaVersion": 6,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+      "comma-style": ["error", "last"]
+  }
 }
